maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: '=' expected but identifier found.
def ilEstO?LeBiscuit?() {
                    ^JediEscaper:19: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^